--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,12 +1,20 @@
+$sidebar-nav-width: 250px;
+
 #wrapper {
-  padding-left: 250px;
+  padding-left: $sidebar-nav-width;
   transition: all 0.4s ease 0s;
+  &.active {
+    padding-left: 0;
+    #sidebar-wrapper {
+      left: 0;
+    }
+  }
 }
 
 #sidebar-wrapper {
-  margin-left: -250px;
-  left: 250px;
-  width: 250px;
+  margin-left: -$sidebar-nav-width;
+  left: $sidebar-nav-width;
+  width: $sidebar-nav-width;
   background: #000;
   position: fixed;
   height: 100%;
@@ -15,89 +23,72 @@
   transition: all 0.4s ease 0s;
 }
 
-#wrapper.active {
-  padding-left: 0;
-}
-
-#wrapper.active #sidebar-wrapper {
-  left: 0;
-}
-
 #page-content-wrapper {
   width: 100%;
 }
 
-
+@mixin white-backgound {
+  color: #fff;
+  background: rgba(255,255,255,0.2);
+}
 
 .sidebar-nav {
   position: absolute;
   top: 0;
-  width: 250px;
+  width: $sidebar-nav-width;
   list-style: none;
   margin: 0;
   padding: 0;
+  li {
+    line-height: 40px;
+    text-indent: 20px;
+    &.active {
+      @include white-backgound;
+    }
+    a {
+      color: #999999;
+      display: block;
+      text-decoration: none;
+      padding-left: 60px;
+      span:before {
+        position: absolute;
+        left: 0;
+        color: #41484c;
+        text-align: center;
+        width: 20px;
+        line-height: 18px;
+      }
+      &:hover {
+        @include white-backgound;
+      }
+      &:active, &:focus {
+        text-decoration: none;
+      }
+    }
+  }
+  & > .sidebar-brand {
+    height: 65px;
+    line-height: 60px;
+    font-size: 18px;
+  }
+  & > .sidebar-brand a {
+    color: #999999;
+    &:hover {
+      color: #fff;
+      background: none;
+    }
+  }
 }
-
-.sidebar-nav li {
-  line-height: 40px;
-  text-indent: 20px;
-}
-
-.sidebar-nav li a {
-  color: #999999;
-  display: block;
-  text-decoration: none;
-  padding-left: 60px;
-}
-
-.sidebar-nav li a span:before {
-  position: absolute;
-  left: 0;
-  color: #41484c;
-  text-align: center;
-  width: 20px;
-  line-height: 18px;
-}
-
-.sidebar-nav li a:hover,
-.sidebar-nav li.active {
-  color: #fff;
-  background: rgba(255,255,255,0.2);
-  text-decoration: none;
-}
-
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-  text-decoration: none;
-}
-
-.sidebar-nav > .sidebar-brand {
-  height: 65px;
-  line-height: 60px;
-  font-size: 18px;
-}
-
-.sidebar-nav > .sidebar-brand a {
-  color: #999999;
-}
-
-.sidebar-nav > .sidebar-brand a:hover {
-  color: #fff;
-  background: none;
-}
-
-
 
 .content-header {
   height: 65px;
   line-height: 65px;
-}
-
-.content-header h1 {
-  margin: 0;
-  margin-left: 20px;
-  line-height: 65px;
-  display: inline-block;
+  h1 {
+    margin: 0;
+    margin-left: 20px;
+    line-height: 65px;
+    display: inline-block;
+  }
 }
 
 #menu-toggle {
@@ -108,39 +99,165 @@
   color: #000;
 }
 
-.inset {
-  padding: 20px;
-}
-
 @media (max-width:767px) {
 
-#wrapper {
-  padding-left: 0;
+  #wrapper {
+    padding-left: 0;
+  }
+
+  #sidebar-wrapper {
+    left: 0;
+  }
+
+  #wrapper.active {
+    position: relative;
+    left: $sidebar-nav-width;
+    #sidebar-wrapper {
+      left: $sidebar-nav-width;
+      width: $sidebar-nav-width;
+      transition: all 0.4s ease 0s;
+    }
+  }
+
+  #menu-toggle {
+    display: inline-block;
+    text-decoration: none;
+    color: inherit;
+  }
+
 }
 
-#sidebar-wrapper {
-  left: 0;
-}
-
-#wrapper.active {
+.timeline {
+  list-style: none;
+  padding: 20px 0 20px;
   position: relative;
-  left: 250px;
+  &:before {
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    content: " ";
+    width: 3px;
+    background-color: #eeeeee;
+    left: 50%;
+    margin-left: -1.5px;
+  }
+}
+.timeline > li {
+  margin-bottom: 20px;
+  position: relative;
+  &:before, &:after {
+    content: " ";
+    display: table;
+  }
+  &:after {
+    clear: both;
+  }
+  & > .timeline-panel {
+    width: 50%;
+    float: left;
+    border: 1px solid #d4d4d4;
+    border-radius: 2px;
+    padding: 20px;
+    position: relative;
+    -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  }
+}
+.timeline > li.timeline-inverted + li:not(.timeline-inverted),
+.timeline > li:not(.timeline-inverted) + li.timeline-inverted {
+  margin-top: -60px;
 }
 
-#wrapper.active #sidebar-wrapper {
-  left: 250px;
-  width: 250px;
-  transition: all 0.4s ease 0s;
+.timeline > li:not(.timeline-inverted) {
+  padding-right:90px;
 }
 
-#menu-toggle {
-  display: inline-block;
-  text-decoration: none;
+.timeline > li.timeline-inverted {
+  padding-left:90px;
+}
+.timeline > li > .timeline-panel {
+  &:before {
+    position: absolute;
+    top: 26px;
+    right: -15px;
+    display: inline-block;
+    border-top: 15px solid transparent;
+    border-left: 15px solid #ccc;
+    border-right: 0 solid #ccc;
+    border-bottom: 15px solid transparent;
+    content: " ";
+  }
+  &:after {
+    position: absolute;
+    top: 27px;
+    right: -14px;
+    display: inline-block;
+    border-top: 14px solid transparent;
+    border-left: 14px solid #fff;
+    border-right: 0 solid #fff;
+    border-bottom: 14px solid transparent;
+    content: " ";
+  }
+}
+.timeline > li > .timeline-badge {
+  color: #fff;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 1.4em;
+  text-align: center;
+  position: absolute;
+  top: 16px;
+  left: 50%;
+  margin-left: -25px;
+  background-color: #999999;
+  z-index: 100;
+  border-top-right-radius: 50%;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+}
+.timeline > li.timeline-inverted > .timeline-panel {
+  float: right;
+  &:before {
+    border-left-width: 0;
+    border-right-width: 15px;
+    left: -15px;
+    right: auto;
+  }
+  &:after {
+    border-left-width: 0;
+    border-right-width: 14px;
+    left: -14px;
+    right: auto;
+  }
+}
+.timeline-badge {
+  &.primary {
+    background-color: #2e6da4 !important;
+  }
+  &.success {
+    background-color: #3f903f !important;
+  }
+  &.warning {
+    background-color: #f0ad4e !important;
+  }
+  &.danger {
+    background-color: #d9534f !important;
+  }
+  &.info {
+    background-color: #5bc0de !important;
+  }
+}
+.timeline-title {
+  margin-top: 0;
   color: inherit;
 }
-
-.inset {
-  padding: 15px;
+.timeline-body {
+  & > p, & > ul {
+    margin-bottom: 0;
+  }
 }
-
+.timeline-body > p + p {
+  margin-top: 5px;
 }
