Dynamically generate timeline with profile.json.
profile.json contains:
  - name: Name of person.
  - experiences: Work/academic experiences.
    - organisation: Company/organisation name.
    - start_date: Start date, for convenience, as a string.
    - end_date: End date, if applicable, as a string.
                If not specified, experience assumed to be 'Current'.
                If neither start_date or end_date is specified,
                experience is not dated.
    - icon: Properties of badge/icon that appears next to experience.
      - fontawesome_class: Font Awesome icon to use for badge/icon.
                           See: http://fortawesome.github.io/Font-Awesome/icons/
      - bootstrap_state: Bootstrap contextual state to color badge/icon.
                         E.g. 'primary', 'default', 'warning'.
                         See: http://getbootstrap.com/css/.
Example profile.json:
{
    "name": "John Doe",
    "experiences": [
        {
            "organisation": "Nintendo",
            "start_date": "Dec 1 2014",
            "icon": {
                "fontawesome_class": "gamepad",
                "bootstrap_state": "primary"
            }
        },
        {
            "organisation": "Example organisation",
            "start_date": "Mar 15 2013",
            "end_date": "Nov 30 2014",
            "description": "Mussum ipsum cacilds, vidis litro abertis."
        }
    ]
}

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,7 +1,8 @@
-$sidebar-nav-width: 250px;
+$sidebar-wrapper-width: 230px;
+$sidebar-nav-width: $sidebar-wrapper-width - 20px;
 
 #wrapper {
-  padding-left: $sidebar-nav-width;
+  padding-left: $sidebar-wrapper-width;
   transition: all 0.4s ease 0s;
   &.active {
     padding-left: 0;
@@ -12,9 +13,9 @@ $sidebar-nav-width: 250px;
 }
 
 #sidebar-wrapper {
-  margin-left: -$sidebar-nav-width;
-  left: $sidebar-nav-width;
-  width: $sidebar-nav-width;
+  margin-left: -$sidebar-wrapper-width;
+  left: $sidebar-wrapper-width;
+  width: $sidebar-wrapper-width;
   background: #000;
   position: fixed;
   height: 100%;
@@ -49,7 +50,6 @@ $sidebar-nav-width: 250px;
       color: #999999;
       display: block;
       text-decoration: none;
-      padding-left: 60px;
       span:before {
         position: absolute;
         left: 0;
@@ -111,10 +111,10 @@ $sidebar-nav-width: 250px;
 
   #wrapper.active {
     position: relative;
-    left: $sidebar-nav-width;
+    left: $sidebar-wrapper-width;
     #sidebar-wrapper {
-      left: $sidebar-nav-width;
-      width: $sidebar-nav-width;
+      left: $sidebar-wrapper-width;
+      width: $sidebar-wrapper-width;
       transition: all 0.4s ease 0s;
     }
   }
