--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -51,6 +51,7 @@ $sidebar-nav-width: $sidebar-wrapper-width - 20px;
       left: 7.5%;
       img {
         margin: 10px 0;
+        border-radius: 50%;
       }
     }
     a {
