Link avatar to #home to enable smooth scrolling

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
         <nav id="spy">
             <ul class="sidebar-nav nav">
                 <li>
-                    <a href="#" data-scroll>
+                    <a href="#home" data-scroll>
                         <span class="avatar">
                             <img src="<%= '/assets/' + @profile['avatar'] %>" width="128px">
                         </span>
