Use asset_path to get path to image

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
                 <li>
                     <a href="#home" data-scroll>
                         <span class="avatar">
-                            <img src="<%= '/assets/' + @profile['avatar'] %>" width="128px">
+                            <img src="<%= asset_path( @profile['avatar'] ) %>" width="128px">
                         </span>
                     </a>
                 </li>
