--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -54,14 +54,14 @@
                                     <% if experience['start_date'] && experience['end_date'] %>
                                         <p>
                                             <small class="text-muted">
-                                                <i class="glyphicon glyphicon-time"></i>
+                                                <i class="fa fa-clock-o"></i>
                                                 <%= experience['start_date'] %> to <%= experience['end_date'] %>
                                             </small>
                                         </p>
                                     <% elsif experience['start_date'] && ! experience['end_date'] %>
                                         <p>
                                             <small class="text-muted">
-                                                <i class="glyphicon glyphicon-time"></i>
+                                                <i class="fa fa-clock-o"></i>
                                                 <%= experience['start_date'] %> to Current
                                             </small>
                                         </p>
