--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,13 @@
                     <li>
                         <a href="#anch<%= index %>" data-scroll>
                             <% icon = experience['icon'] %>
-                            <span class="fa <%= icon ? 'fa-' + icon['fontawesome_class'] : 'fa-bookmark' %> solo"><%= experience['organisation'] %></span>
+                            <span class="fa <%= icon ? 'fa-' + icon['fontawesome_class'] : 'fa-bookmark' %> solo">
+                                <% if experience['responsibility'] %>
+                                    <%= experience['responsibility'] %>
+                                <% else %>
+                                    <%= experience['organisation'] %>
+                                <% end %>
+                            </span>
                         </a>
                     </li>
                 <% end %>
